# shiftreport-generator

./: .gitignore  README.md  build_exe.ps1  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_shift_data.csv
src/shiftreport/: __init__.py  cli.py  emailer.py  gui.py  reader.py  report.py  scheduler.py
tests/: test_reader.py  test_report.py  test_scheduler.py
