[project]
name = "shiftreport-generator"
version = "0.1.0"
description = "Convierte un CSV/Excel de turno en un reporte formateado (Excel + HTML) y lo envía solo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cesar Romero del Palacio" }]
keywords = ["report", "automation", "excel", "operations", "shift"]
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.scripts]
shiftreport = "shiftreport.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
